variables.Variables.scala.error
Compilation error:
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:7: error: not found: type int
var dejaFait:int = 0
             ^