variables.Variables.scala.code
var nbPas:int = 0
while (!estSurBiscuit()) {
  avance()
  nbPas = nbPas+1
}
prendBiscuit()
var dejaFait:int = 0
while (dejaFait!=nbPas) {
  dejaFait = dejaFait+1
}
poseBiscuit()